--- a/edm/src/app/product/product.component.scss
+++ b/edm/src/app/product/product.component.scss
@@ -52,7 +52,7 @@
 .product_box {
     display: inline-block;
     width: 25%;
-    padding: 10px;
+    padding: 10px 10px 50px 10px;
     vertical-align: top;
 }
 .mobile_filter {
@@ -84,6 +84,19 @@
     font-size: 14px;
     vertical-align: middle;
 }
+.slider_product {
+    cursor: pointer;
+    transition: color 0.1s ease-in-out, background-color 0.1s ease-in-out, border-color 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
+    box-shadow: 0 0 7px #dedede;
+    -webkit-box-shadow: 0 0 7px #dedede;
+    -moz-box-shadow: 0 0 7px #dedede;
+    border-radius: 10px;
+}
+.slider_product:hover {
+    box-shadow: 0 0 7px #c1c1c1;
+    -webkit-box-shadow: 0 0 7px #c1c1c1;
+    -moz-box-shadow: 0 0 7px #c1c1c1;
+}
 
 /* ********** Responsive ********** */
 
@@ -107,6 +120,7 @@
 @media screen and (max-width: 950px) {
     .product_box {
         width: 50%;
+        padding: 10px 10px 40px 10px;
     }
 }
 
@@ -134,11 +148,13 @@
 @media screen and (max-width: 700px) {
     .product_box {
         width: 50%;
+        padding: 10px 10px 30px 10px;
     }
 }
 
 @media screen and (max-width: 500px) {
     .product_box {
         width: 100%;
+        padding: 10px 10px 20px 10px;
     }
 }
