--- a/edm/src/app/service/service.component.scss
+++ b/edm/src/app/service/service.component.scss
@@ -1,6 +1,6 @@
 .service_page {
     background: #F9F9F9;
-    padding: 20px 10px 50px 10px;
+    padding: 0 10px 50px 10px;
 }
 .services_section {
     padding: 20px 0;
@@ -19,19 +19,22 @@
 /* ********** Responsive ********** */
 
 @media screen and (max-width: 900px) {
-    .services_section {
-        padding: 20px 20px 40px 20px;
+    .service_page {
+        padding: 0 10px 40px 10px;
     }
 }
 
 @media screen and (max-width: 768px) {
+    .service_page {
+        padding: 0 10px 30px 10px;
+    }
     .services_section {
-        padding: 0 0 30px 0;
+        padding: 20px 0 10px 0;
     }
 }
 
 @media screen and (max-width: 550px) {
-    .services_section {
-        padding: 0 0 20px 0;
+    .service_page {
+        padding: 0 10px 20px 10px;
     }
 }
