Update admin layout
Add dashboard and geners module

--- a/edm/src/app/app.component.html
+++ b/edm/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="mainScreen">
     <router-outlet></router-outlet>
 
-    <div class="loader">
+    <!-- <div class="loader">
         <img src="../assets/images/loader.svg" />
-    </div>
+    </div> -->
 
 </div>
