admin side menu and header design started

--- a/edm/src/app/admin/dashboard/dashboard.component.html
+++ b/edm/src/app/admin/dashboard/dashboard.component.html
@@ -1,1 +1,21 @@
-Dashboard
+<p>Dashboard</p>
+<p>Dashboard</p>
+<p>Dashboard</p>
+<p>Dashboard</p>
+<p>Dashboard</p>
+<p>Dashboard</p>
+<p>Dashboard</p>
+<p>Dashboard</p>
+<p>Dashboard</p>
+<p>Dashboard</p>
+<p>Dashboard</p>
+<p>Dashboard</p>
+<p>Dashboard</p>
+<p>Dashboard</p>
+<p>Dashboard</p>
+<p>Dashboard</p>
+<p>Dashboard</p>
+<p>Dashboard</p>
+<p>Dashboard</p>
+<p>Dashboard</p>
+<p>Dashboard</p>
