--- a/edm/src/app/theme/client/header/header.component.scss
+++ b/edm/src/app/theme/client/header/header.component.scss
@@ -113,14 +113,27 @@
     background-size: 100%;
     background-position: center;
     border-radius: 100%;
-    overflow: hidden;
     border: 2px solid #556080;
     cursor: pointer;
+    position: relative;
 }
 .user_profile_img img {
     width: 100%;
     height: 100%;
 }
+.user_profile_img:after {
+    content: "";
+    background: #05C38F;
+    width: 8px;
+    height: 8px;
+    display: inline-block;
+    position: absolute;
+    right: -2px;
+    top: -2px;
+    z-index: 9;
+    border-radius: 100%;
+}
+
 // ********** Responsive **********
 
 @media screen and (max-width: 800px) {
