admin side header footer design added

--- a/edm/src/app/admin/dashboard/dashboard.component.html
+++ b/edm/src/app/admin/dashboard/dashboard.component.html
@@ -1,21 +1,21 @@
-<p>Dashboard</p>
-<p>Dashboard</p>
-<p>Dashboard</p>
-<p>Dashboard</p>
-<p>Dashboard</p>
-<p>Dashboard</p>
-<p>Dashboard</p>
-<p>Dashboard</p>
-<p>Dashboard</p>
-<p>Dashboard</p>
-<p>Dashboard</p>
-<p>Dashboard</p>
-<p>Dashboard</p>
-<p>Dashboard</p>
-<p>Dashboard</p>
-<p>Dashboard</p>
-<p>Dashboard</p>
-<p>Dashboard</p>
-<p>Dashboard</p>
-<p>Dashboard</p>
-<p>Dashboard</p>
+<p>dashboard</p>
+<p>dashboard</p>
+<p>dashboard</p>
+<p>dashboard</p>
+<p>dashboard</p>
+<p>dashboard</p>
+<p>dashboard</p>
+<p>dashboard</p>
+<p>dashboard</p>
+<p>dashboard</p>
+<p>dashboard</p>
+<p>dashboard</p>
+<p>dashboard</p>
+<p>dashboard</p>
+<p>dashboard</p>
+<p>dashboard</p>
+<p>dashboard</p>
+<p>dashboard</p>
+<p>dashboard</p>
+<p>dashboard</p>
+<p>dashboard</p>
