Menu design changes

--- a/edm/src/app/theme/admin/header/header.component.html
+++ b/edm/src/app/theme/admin/header/header.component.html
@@ -6,25 +6,25 @@
         </p>
         <div class="menu_listing">
             <div class="menu_list active_menu_list menu_home">
-                <p><span>Home</span></p>
+                <a><span>Home</span></a>
             </div>
             <div class="menu_list menu_alltracks">
-                <p><span>All Tracks</span></p>
+                <a><span>All Tracks</span></a>
             </div>
             <div class="menu_list menu_allbeats">
-                <p><span>All Beats</span></p>
+                <a><span>All Beats</span></a>
             </div>
             <div class="menu_list menu_services">
-                <p><span>Services</span></p>
+                <a><span>Services</span></a>
             </div>
             <div class="menu_list menu_earning_analytics">
-                <p><span>Earning / Analytics</span></p>
+                <a><span>Earning / Analytics</span></a>
             </div>
             <div class="menu_list menu_support">
-                <p><span>Email notification</span></p>
+                <a><span>Email notification</span></a>
             </div>
             <div class="menu_list menu_settings">
-                <p><span>Settings</span></p>
+                <a><span>Settings</span></a>
             </div>
         </div>
     </div>
