--- a/edm/src/app/theme/admin/header/header.component.scss
+++ b/edm/src/app/theme/admin/header/header.component.scss
@@ -96,7 +96,7 @@
     z-index: 9;
     border-radius: 100%;
 }
-.menu_list > p:before {
+.menu_list > a:before {
     content: "";
     margin: auto;
     left: 0;
@@ -109,7 +109,7 @@
     background-position: center;
     position: absolute;
 }
-.menu_list > p:after {
+.menu_list > a:after {
     content: "";
     margin: auto;
     right: 0;
@@ -143,6 +143,7 @@
     -moz-transition: -moz-transform .3s ease-in-out,width .3s ease-in-out;
     -o-transition: -o-transform .3s ease-in-out,width .3s ease-in-out;
     transition: transform .3s ease-in-out,width .3s ease-in-out;
+    min-height: calc(100vh - 56px);
 }
 .project_logo {
     margin: 0;
@@ -160,8 +161,9 @@
     height: 31px;
     width: auto;
 }
-.menu_list p {
+.menu_list a {
     margin: 0;
+    color: #212529 !important;
 }
 .menu_list {
     margin: 3px 0;
@@ -185,7 +187,7 @@
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     background: #ececec;
 }
-.menu_list p span {
+.menu_list a span {
     transition: all .3s linear;
     -webkit-transition: .3s linear;
     -moz-transition: .3s linear;
@@ -199,7 +201,7 @@
     .admin_menu {
         width: 50px !important;
     }
-    .menu_list p span {
+    .menu_list a span {
         font-size: 0px;
         transition: none;
         -webkit-transition: none;
@@ -207,10 +209,10 @@
         -ms-transition: none;
         -o-transition: none;
     }
-    .menu_list p:after {
+    .menu_list a:after {
         font-size: 0px;
     }
-    .menu_list p:before {
+    .menu_list a:before {
         width: 46px !important;
     }
     .menu_list {
