--- a/edm/src/app/theme/admin/header/header.component.html
+++ b/edm/src/app/theme/admin/header/header.component.html
@@ -6,7 +6,7 @@
         </p>
         <div class="menu_listing">
             <div class="menu_list active_menu_list menu_home">
-                <p><span>Home</span></p>
+                <p><span>Dashboard</span></p>
             </div>
             <div class="menu_list menu_alltracks">
                 <p><span>All Tracks</span></p>
@@ -28,7 +28,7 @@
             </div>
         </div>
     </div>
-    
+
     <div class="admin_header">
         <div class="menu_navigation">
             <img src="../../../../assets/images/navigation.svg">
@@ -54,7 +54,8 @@
                 Pallavi Chapla
             </p>
             <div class="user_profile_img">
-                <img src="https://pixinvent.com/materialize-material-design-admin-template/app-assets/images/user/12.jpg" />
+                <img
+                    src="https://pixinvent.com/materialize-material-design-admin-template/app-assets/images/user/12.jpg" />
             </div>
         </div>
     </div>
